--- a/app/views/bulk_discounts/index.html.erb
+++ b/app/views/bulk_discounts/index.html.erb
@@ -10,3 +10,8 @@
     <p><%= button_to "Delete Discount", merchant_bulk_discount_path(@merchant, discount), method: :delete %></p>
   </div>
 <% end %>
+
+<h3>Upcoming Holidays:</h3>
+<% @holidays.each do |holiday| %>
+  <p><%= "#{holiday.name} - #{holiday.date}" %></p> 
+<% end %>
