--- a/app/views/bulk_discounts/show.html.erb
+++ b/app/views/bulk_discounts/show.html.erb
@@ -1,5 +1,5 @@
 <%= render partial: "shared/header", locals: { subtitle: @merchant.name } %>
-<h3 style="text-align:center;background-color:whitesmoke;border-top-style:solid">Bulk Discount #<%= @discount.id %></h3>
+<h3 style="text-align:center;background-color:whitesmoke;border-top-style:solid"><%= @discount.name %></h3>
 
 <p>Quantity Threshold: <%= @discount.threshold %> items</p>
 <p>Percentage Discount: <%= @discount.discount %>%</p>
