--- a/app/views/bulk_discounts/_form.html.erb
+++ b/app/views/bulk_discounts/_form.html.erb
@@ -1,4 +1,6 @@
 <%= form_with url: path, method: method, local: true do |f| %>
+  <%= f.label :name, "Name:" %><br>
+  <%= f.text_field :name, value: name_value %><br><br>
   <%= f.label :discount, "Percentage Discount:" %><br>
   <%= f.text_field :discount, value: discount_value %><br><br>
   <%= f.label :threshold, "Quantity Threshold:" %><br>
