--- a/app/views/bulk_discounts/edit.html.erb
+++ b/app/views/bulk_discounts/edit.html.erb
@@ -1,3 +1,3 @@
 <h1>New Bulk Discount</h1>
 
-<%= render partial: "form", locals: { path: merchant_bulk_discount_path(@merchant, @discount), method: :patch, discount_value: @discount.discount, threshold_value: @discount.threshold } %>
+<%= render partial: "form", locals: { path: merchant_bulk_discount_path(@merchant, @discount), method: :patch, discount_value: @discount.discount, threshold_value: @discount.threshold, name_value: @discount.name } %>
