--- a/app/views/bulk_discounts/new.html.erb
+++ b/app/views/bulk_discounts/new.html.erb
@@ -1,3 +1,3 @@
 <h1>New Bulk Discount</h1>
 
-<%= render partial: "form", locals: { path: merchant_bulk_discounts_path(@merchant), method: :post, discount_value: nil, threshold_value: nil } %>
+<%= render partial: "form", locals: { path: merchant_bulk_discounts_path(@merchant), method: :post, discount_value: nil, threshold_value: nil, name_value: nil } %>
