--- a/app/views/bulk_discounts/index.html.erb
+++ b/app/views/bulk_discounts/index.html.erb
@@ -16,6 +16,10 @@
 <br>
 
 <h3>Upcoming Holidays:</h3>
-<% @holidays.each do |holiday| %>
-  <p><%= "#{holiday.name} - #{holiday.date}" %></p> 
+<% @holidays.each_with_index do |holiday, i| %>
+  <div id="holiday-<%= i + 1 %>">
+    <%= "#{holiday.name} - #{holiday.date}   " %>
+    <%= button_to "Create Discount", new_merchant_bulk_discount_path(@merchant), form: {style: 'display:inline-block;'}, method: :get, params: {holiday: holiday.name} %>
+    <br><br>
+  </div> 
 <% end %>
