Add commits to old api call mock, fix extra erb tag in admin invoices show

--- a/app/views/admin/invoices/show.html.erb
+++ b/app/views/admin/invoices/show.html.erb
@@ -51,7 +51,7 @@ tr:nth-child(even) {
         <tr>
           <td><%= i.item.name %></td>
           <td><%= i.quantity %></td>
-          <td><%= "$" + sprintf('%.2f', i.item.unit_price) %> %></td>
+          <td><%= "$" + sprintf('%.2f', i.item.unit_price) %></td>
           <td><%= i.status %></td>
         </tr>
       <% end %>
