--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,8 +2,9 @@
 <h1>Little Esty Shop (With Bulk Discounts)</h1>
 <p>This application has been seeded with sample data in order to simulate functionality. Please visit the application's <%= link_to "README", "https://github.com/amikaross/little-esty-shop#readme" %> for more information about the project.</p>
 </center>
-
-<h2>Start exploring:</h2>
-<h3>Visit An Example Merchant's Dashboard: </h3><%= link_to "Merchant #1's Dashboard", merchant_dashboard_index_path(1) %>
-<h3>Visit An Example Administrator's Dashboard: </h3><%= link_to "Admin Dashboard", "/admin" %>
+<br>
+<br>
+<h2>Start Exploring:</h2>
+<p>Visit An Example <%= link_to "Merchant's Dashboard", merchant_dashboard_index_path(1) %></p>
+<p>Visit An Example <%= link_to "Admin Dashboard", "/admin" %></p>
 
